Address review comments - separate unit tests for dissector from processor; add delimiter and fieldhelper tests
Signed-off-by: Hai Yan <oeyh@amazon.com>