@@ -5,6 +5,7 @@
 
 package org.opensearch.dataprepper.plugins.processor.dissect;
 
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
@@ -14,6 +15,10 @@ import org.opensearch.dataprepper.metrics.PluginMetrics;
 import org.opensearch.dataprepper.model.event.Event;
 import org.opensearch.dataprepper.model.event.JacksonEvent;
 import org.opensearch.dataprepper.model.record.Record;
+import org.opensearch.dataprepper.plugins.processor.dissect.Fields.AppendField;
+import org.opensearch.dataprepper.plugins.processor.dissect.Fields.Field;
+import org.opensearch.dataprepper.plugins.processor.dissect.Fields.IndirectField;
+import org.opensearch.dataprepper.plugins.processor.dissect.Fields.NormalField;
 import org.opensearch.dataprepper.plugins.processor.mutateevent.TargetType;
 
 import java.util.Collections;
@@ -23,8 +28,8 @@ import java.util.Map;
 
 import static org.hamcrest.CoreMatchers.is;
 import static org.hamcrest.MatcherAssert.assertThat;
-import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
@@ -36,13 +41,28 @@ class DissectProcessorTest {
     @Mock
     private DissectProcessorConfig dissectConfig;
 
+    @Mock
+    private Dissector dissector;
+
+    @BeforeEach
+    void setUp() {
+        when(dissectConfig.getMap()).thenReturn(Map.of());
+    }
 
     @Test
-    void test_normal_field_trailing_spaces(){
-        Map<String, String> dissectMap = Map.of("test", " %{field1} %{field2} ");
-        when(dissectConfig.getMap()).thenReturn(dissectMap);
+    void test_normal_fields_dissect_succeeded() throws NoSuchFieldException, IllegalAccessException {
+
+        Field field1 = new NormalField("field1");
+        Field field2 = new NormalField("field2");
+        field1.setValue("foo");
+        field2.setValue("bar");
+
+        when(dissector.dissectText(any(String.class))).thenReturn(true);
+        when(dissector.getDissectedFields()).thenReturn(List.of(field1, field2));
+
         final DissectProcessor processor = createObjectUnderTest();
-        final Record<Event> record = getEvent(" foo bar ");
+        reflectivelySetDissectorMap(processor);
+        final Record<Event> record = getEvent("");
         final List<Record<Event>> dissectedRecords = (List<Record<Event>>) processor.doExecute(Collections.singletonList(record));
 
         assertTrue(dissectedRecords.get(0).getData().containsKey("field1"));
@@ -50,15 +70,22 @@ class DissectProcessorTest {
 
         assertThat(dissectedRecords.get(0).getData().get("field1", String.class), is("foo"));
         assertThat(dissectedRecords.get(0).getData().get("field2", String.class), is("bar"));
-
     }
 
     @Test
-    void test_normal_field_without_trailing_spaces(){
-        Map<String, String> dissectMap = Map.of("test", "dm1 %{field1} %{field2} dm2");
-        when(dissectConfig.getMap()).thenReturn(dissectMap);
+    void test_append_fields_dissect_succeeded() throws NoSuchFieldException, IllegalAccessException {
+
+        Field field1 = new AppendField("field1");
+        Field field2 = new AppendField("field2");
+        field1.setValue("foo");
+        field2.setValue("bar");
+
+        when(dissector.dissectText(any(String.class))).thenReturn(true);
+        when(dissector.getDissectedFields()).thenReturn(List.of(field1, field2));
+
         final DissectProcessor processor = createObjectUnderTest();
-        final Record<Event> record = getEvent("dm1 foo bar dm2");
+        reflectivelySetDissectorMap(processor);
+        final Record<Event> record = getEvent("");
         final List<Record<Event>> dissectedRecords = (List<Record<Event>>) processor.doExecute(Collections.singletonList(record));
 
         assertTrue(dissectedRecords.get(0).getData().containsKey("field1"));
@@ -66,246 +93,136 @@ class DissectProcessorTest {
 
         assertThat(dissectedRecords.get(0).getData().get("field1", String.class), is("foo"));
         assertThat(dissectedRecords.get(0).getData().get("field2", String.class), is("bar"));
-
     }
 
     @Test
-    void test_normal_field_failure_without_delimiters(){
-        Map<String, String> dissectMap = Map.of("test", "dm1 %{field1} %{field2} dm2");
-        when(dissectConfig.getMap()).thenReturn(dissectMap);
+    void test_indirect_fields_dissect_succeeded() throws NoSuchFieldException, IllegalAccessException {
+
+        Field field1 = new IndirectField("field1");
+        Field field2 = new IndirectField("field2");
+        field1.setValue("foo");
+        field2.setValue("bar");
+
+        when(dissector.dissectText(any(String.class))).thenReturn(true);
+        when(dissector.getDissectedFields()).thenReturn(List.of(field1, field2));
+
         final DissectProcessor processor = createObjectUnderTest();
-        final Record<Event> record = getEvent("dm1 foo bar");
-        final List<Record<Event>> dissectedRecords = (List<Record<Event>>) processor.doExecute(Collections.singletonList(record));
-
-        assertFalse(dissectedRecords.get(0).getData().containsKey("field1"));
-        assertFalse(dissectedRecords.get(0).getData().containsKey("field2"));
-    }
-
-    @Test
-    void test_normal_field_failure_with_extra_whitespaces(){
-        Map<String, String> dissectMap = Map.of("test", "dm1 %{field1} %{field2} dm2");
-        when(dissectConfig.getMap()).thenReturn(dissectMap);
-        final DissectProcessor processor = createObjectUnderTest();
-        final Record<Event> record = getEvent(" dm1 foo bar dm2");
-        final List<Record<Event>> dissectedRecords = (List<Record<Event>>) processor.doExecute(Collections.singletonList(record));
-
-        assertFalse(dissectedRecords.get(0).getData().containsKey("field1"));
-        assertFalse(dissectedRecords.get(0).getData().containsKey("field2"));
-    }
-
-    @Test
-    void test_named_skip_field(){
-        Map<String, String> dissectMap = Map.of("test", "dm1 %{?field1} %{field2} dm2");
-        when(dissectConfig.getMap()).thenReturn(dissectMap);
-        final DissectProcessor processor = createObjectUnderTest();
-        final Record<Event> record = getEvent("dm1 foo bar dm2");
-        final List<Record<Event>> dissectedRecords = (List<Record<Event>>) processor.doExecute(Collections.singletonList(record));
-
-        assertFalse(dissectedRecords.get(0).getData().containsKey("field1"));
-        assertTrue(dissectedRecords.get(0).getData().containsKey("field2"));
-
-        assertThat(dissectedRecords.get(0).getData().get("field2", String.class), is("bar"));
-    }
-
-    @Test
-    void test_unnamed_skip_field(){
-        Map<String, String> dissectMap = Map.of("test", "dm1 %{} %{field2} dm2");
-        when(dissectConfig.getMap()).thenReturn(dissectMap);
-        final DissectProcessor processor = createObjectUnderTest();
-        final Record<Event> record = getEvent("dm1 foo bar dm2");
-        final List<Record<Event>> dissectedRecords = (List<Record<Event>>) processor.doExecute(Collections.singletonList(record));
-
-        assertFalse(dissectedRecords.get(0).getData().containsKey("field1"));
-        assertTrue(dissectedRecords.get(0).getData().containsKey("field2"));
-
-        assertThat(dissectedRecords.get(0).getData().get("field2", String.class), is("bar"));
-    }
-
-    @Test
-    void test_indirect_field_with_skip_field(){
-        Map<String, String> dissectMap = Map.of("test", "dm1 %{?field1} %{&field1} dm2");
-        when(dissectConfig.getMap()).thenReturn(dissectMap);
-        final DissectProcessor processor = createObjectUnderTest();
-        final Record<Event> record = getEvent("dm1 foo bar dm2");
-        final List<Record<Event>> dissectedRecords = (List<Record<Event>>) processor.doExecute(Collections.singletonList(record));
-
-        assertFalse(dissectedRecords.get(0).getData().containsKey("field1"));
-        assertTrue(dissectedRecords.get(0).getData().containsKey("foo"));
-
-        assertThat(dissectedRecords.get(0).getData().get("foo", String.class), is("bar"));
-    }
-
-    @Test
-    void test_indirect_field_with_normal_field(){
-        Map<String, String> dissectMap = Map.of("test", "dm1 %{field1} %{&field1} dm2");
-        when(dissectConfig.getMap()).thenReturn(dissectMap);
-        final DissectProcessor processor = createObjectUnderTest();
-        final Record<Event> record = getEvent("dm1 foo bar dm2");
+        reflectivelySetDissectorMap(processor);
+        final Record<Event> record = getEvent("");
         final List<Record<Event>> dissectedRecords = (List<Record<Event>>) processor.doExecute(Collections.singletonList(record));
 
         assertTrue(dissectedRecords.get(0).getData().containsKey("field1"));
-        assertTrue(dissectedRecords.get(0).getData().containsKey("foo"));
+        assertTrue(dissectedRecords.get(0).getData().containsKey("field2"));
+
         assertThat(dissectedRecords.get(0).getData().get("field1", String.class), is("foo"));
-        assertThat(dissectedRecords.get(0).getData().get("foo", String.class), is("bar"));
-    }
-
-
-    @Test
-    void test_append_field_without_index(){
-        Map<String, String> dissectMap = Map.of("test", "dm1 %{+field1} %{+field1} dm2");
-        when(dissectConfig.getMap()).thenReturn(dissectMap);
-        final DissectProcessor processor = createObjectUnderTest();
-        final Record<Event> record = getEvent("dm1 foo bar dm2");
-        final List<Record<Event>> dissectedRecords = (List<Record<Event>>) processor.doExecute(Collections.singletonList(record));
-
-        assertTrue(dissectedRecords.get(0).getData().containsKey("field1"));
-        assertThat(dissectedRecords.get(0).getData().get("field1", String.class), is("foobar"));
-    }
-
-    @Test
-    void test_append_field_with_index(){
-        Map<String, String> dissectMap = Map.of("test", "dm1 %{+field1/2} %{+field1/1} dm2");
-        when(dissectConfig.getMap()).thenReturn(dissectMap);
-        final DissectProcessor processor = createObjectUnderTest();
-        final Record<Event> record = getEvent("dm1 foo bar dm2");
-        final List<Record<Event>> dissectedRecords = (List<Record<Event>>) processor.doExecute(Collections.singletonList(record));
-
-        assertTrue(dissectedRecords.get(0).getData().containsKey("field1"));
-        assertThat(dissectedRecords.get(0).getData().get("field1", String.class), is("barfoo"));
-    }
-
-    @Test
-    void test_append_whitespace_normal_field(){
-        Map<String, String> dissectMap = Map.of("test", "dm1 %{field1->} %{field2} dm2");
-        when(dissectConfig.getMap()).thenReturn(dissectMap);
-        final DissectProcessor processor = createObjectUnderTest();
-        final Record<Event> record = getEvent("dm1 foo      bar dm2");
-        final List<Record<Event>> dissectedRecords = (List<Record<Event>>) processor.doExecute(Collections.singletonList(record));
-
-        assertTrue(dissectedRecords.get(0).getData().containsKey("field1"));
-        assertThat(dissectedRecords.get(0).getData().get("field1", String.class), is("foo"));
-    }
-
-    @Test
-    void test_append_whitespace_append_field(){
-        Map<String, String> dissectMap = Map.of("test", "dm1 %{+field1->} %{+field1} dm2");
-        when(dissectConfig.getMap()).thenReturn(dissectMap);
-        final DissectProcessor processor = createObjectUnderTest();
-        final Record<Event> record = getEvent("dm1 foo      bar dm2");
-        final List<Record<Event>> dissectedRecords = (List<Record<Event>>) processor.doExecute(Collections.singletonList(record));
-
-        assertTrue(dissectedRecords.get(0).getData().containsKey("field1"));
-        assertThat(dissectedRecords.get(0).getData().get("field1", String.class), is("foobar"));
-    }
-
-    @Test
-    void test_append_whitespace_indirect_field(){
-        Map<String, String> dissectMap = Map.of("test", "dm1 %{?field1->} %{&field1} dm2");
-        when(dissectConfig.getMap()).thenReturn(dissectMap);
-        final DissectProcessor processor = createObjectUnderTest();
-        final Record<Event> record = getEvent("dm1 foo      bar dm2");
-        final List<Record<Event>> dissectedRecords = (List<Record<Event>>) processor.doExecute(Collections.singletonList(record));
-
-        assertTrue(dissectedRecords.get(0).getData().containsKey("foo"));
-        assertThat(dissectedRecords.get(0).getData().get("foo", String.class), is("bar"));
-    }
-
-    @Test
-    void test_skip_fields(){
-        Map<String, String> dissectMap = Map.of("test", "dm1 %{?field1->} %{?field3} %{field2} dm2");
-        when(dissectConfig.getMap()).thenReturn(dissectMap);
-        final DissectProcessor processor = createObjectUnderTest();
-        final Record<Event> record = getEvent("dm1 foo     skip   bar dm2");
-        final List<Record<Event>> dissectedRecords = (List<Record<Event>>) processor.doExecute(Collections.singletonList(record));
-
-        assertTrue(dissectedRecords.get(0).getData().containsKey("field2"));
         assertThat(dissectedRecords.get(0).getData().get("field2", String.class), is("bar"));
     }
 
     @Test
-    void test_normal_fields(){
-        Map<String, String> dissectMap = Map.of("test", "%{id->} %{function} %{server}");
-        when(dissectConfig.getMap()).thenReturn(dissectMap);
+    void test_dissectText_returns_false() throws NoSuchFieldException, IllegalAccessException {
+
+        when(dissector.dissectText(any(String.class))).thenReturn(false);
+
         final DissectProcessor processor = createObjectUnderTest();
-        final Record<Event> record = getEvent("00000043     ViewReceive machine-321");
+        reflectivelySetDissectorMap(processor);
+        final Record<Event> record = getEvent("");
         final List<Record<Event>> dissectedRecords = (List<Record<Event>>) processor.doExecute(Collections.singletonList(record));
 
-        assertTrue(dissectedRecords.get(0).getData().containsKey("function"));
-        assertThat(dissectedRecords.get(0).getData().get("function", String.class), is("ViewReceive"));
+        // assert event is not modified
+        assertThat(dissectedRecords.get(0).getData(), is(record.getData()));
     }
 
     @Test
-    void test_indirect_field_with_append(){
-        Map<String, String> dissectMap = Map.of("test", "%{+field1->} %{+field1} %{&field1->}");
-        when(dissectConfig.getMap()).thenReturn(dissectMap);
+    void test_dissectText_throws_exception() throws NoSuchFieldException, IllegalAccessException {
+        when(dissector.dissectText(any(String.class))).thenThrow(RuntimeException.class);
+
         final DissectProcessor processor = createObjectUnderTest();
-        final Record<Event> record = getEvent("foo     bar result     ");
+        reflectivelySetDissectorMap(processor);
+        final Record<Event> record = getEvent("");
         final List<Record<Event>> dissectedRecords = (List<Record<Event>>) processor.doExecute(Collections.singletonList(record));
 
-        assertTrue(dissectedRecords.get(0).getData().containsKey("foobar"));
-        assertThat(dissectedRecords.get(0).getData().get("foobar", String.class), is("result"));
+        // assert event is not modified
+        assertThat(dissectedRecords.get(0).getData(), is(record.getData()));
     }
 
     @Test
-    void test_target_type_int(){
-        Map<String, String> dissectMap = Map.of("test", "%{field1} %{field2}");
+    void test_target_type_int() throws NoSuchFieldException, IllegalAccessException {
+
+        Field field1 = new IndirectField("field1");
+        Field field2 = new IndirectField("field2");
+        field1.setValue("20");
+        field2.setValue("30");
+        when(dissector.dissectText(any(String.class))).thenReturn(true);
+        when(dissector.getDissectedFields()).thenReturn(List.of(field1, field2));
+
         Map<String, TargetType> targetsMap = Map.of("field1", TargetType.INTEGER);
-        when(dissectConfig.getMap()).thenReturn(dissectMap);
         when(dissectConfig.getTargetTypes()).thenReturn(targetsMap);
+
         final DissectProcessor processor = createObjectUnderTest();
-        final Record<Event> record = getEvent("20 30");
+        reflectivelySetDissectorMap(processor);
+        final Record<Event> record = getEvent("");
         final List<Record<Event>> dissectedRecords = (List<Record<Event>>) processor.doExecute(Collections.singletonList(record));
 
         assertTrue(dissectedRecords.get(0).getData().containsKey("field1"));
         assertTrue(dissectedRecords.get(0).getData().get("field1", Object.class) instanceof Integer);
         assertThat(dissectedRecords.get(0).getData().get("field1", Object.class), is(20));
+
+        assertTrue(dissectedRecords.get(0).getData().containsKey("field2"));
+        assertTrue(dissectedRecords.get(0).getData().get("field2", Object.class) instanceof String);
+        assertThat(dissectedRecords.get(0).getData().get("field2", Object.class), is("30"));
     }
 
     @Test
-    void test_target_type_default(){
-        Map<String, String> dissectMap = Map.of("test", "%{field1} %{field2}");
-        when(dissectConfig.getMap()).thenReturn(dissectMap);
-        final DissectProcessor processor = createObjectUnderTest();
-        final Record<Event> record = getEvent("20 30");
-        final List<Record<Event>> dissectedRecords = (List<Record<Event>>) processor.doExecute(Collections.singletonList(record));
+    void test_target_type_bool() throws NoSuchFieldException, IllegalAccessException {
+        Field field1 = new IndirectField("field1");
+        Field field2 = new IndirectField("field2");
+        field1.setValue("true");
+        field2.setValue("30");
+        when(dissector.dissectText(any(String.class))).thenReturn(true);
+        when(dissector.getDissectedFields()).thenReturn(List.of(field1, field2));
 
-        assertTrue(dissectedRecords.get(0).getData().containsKey("field1"));
-        assertTrue(dissectedRecords.get(0).getData().get("field1", Object.class) instanceof String);
-        assertThat(dissectedRecords.get(0).getData().get("field1", Object.class), is("20"));
-    }
-
-    @Test
-    void test_target_type_bool(){
-        Map<String, String> dissectMap = Map.of("test", "%{field1} %{field2}");
         Map<String, TargetType> targetsMap = Map.of("field1", TargetType.BOOLEAN);
-        when(dissectConfig.getMap()).thenReturn(dissectMap);
         when(dissectConfig.getTargetTypes()).thenReturn(targetsMap);
+
         final DissectProcessor processor = createObjectUnderTest();
-        final Record<Event> record = getEvent("true 30");
+        reflectivelySetDissectorMap(processor);
+        final Record<Event> record = getEvent("");
         final List<Record<Event>> dissectedRecords = (List<Record<Event>>) processor.doExecute(Collections.singletonList(record));
 
         assertTrue(dissectedRecords.get(0).getData().containsKey("field1"));
         assertTrue(dissectedRecords.get(0).getData().get("field1", Object.class) instanceof Boolean);
         assertThat(dissectedRecords.get(0).getData().get("field1", Object.class), is(true));
+
+        assertTrue(dissectedRecords.get(0).getData().containsKey("field2"));
+        assertTrue(dissectedRecords.get(0).getData().get("field2", Object.class) instanceof String);
+        assertThat(dissectedRecords.get(0).getData().get("field2", Object.class), is("30"));
     }
 
     @Test
-    void test_target_type_double(){
-        Map<String, String> dissectMap = Map.of("test", "%{field1} %{field2}");
+    void test_target_type_double() throws NoSuchFieldException, IllegalAccessException {
+        Field field1 = new IndirectField("field1");
+        Field field2 = new IndirectField("field2");
+        field1.setValue("20.0");
+        field2.setValue("30");
+        when(dissector.dissectText(any(String.class))).thenReturn(true);
+        when(dissector.getDissectedFields()).thenReturn(List.of(field1, field2));
+
         Map<String, TargetType> targetsMap = Map.of("field1", TargetType.DOUBLE);
-        when(dissectConfig.getMap()).thenReturn(dissectMap);
         when(dissectConfig.getTargetTypes()).thenReturn(targetsMap);
+
         final DissectProcessor processor = createObjectUnderTest();
-        final Record<Event> record = getEvent("20.5 30");
+        reflectivelySetDissectorMap(processor);
+        final Record<Event> record = getEvent("");
         final List<Record<Event>> dissectedRecords = (List<Record<Event>>) processor.doExecute(Collections.singletonList(record));
 
         assertTrue(dissectedRecords.get(0).getData().containsKey("field1"));
         assertTrue(dissectedRecords.get(0).getData().get("field1", Object.class) instanceof Double);
-        assertThat(dissectedRecords.get(0).getData().get("field1", Object.class), is(20.5));
+        assertThat(dissectedRecords.get(0).getData().get("field1", Object.class), is(20.0d));
+
+        assertTrue(dissectedRecords.get(0).getData().containsKey("field2"));
+        assertTrue(dissectedRecords.get(0).getData().get("field2", Object.class) instanceof String);
+        assertThat(dissectedRecords.get(0).getData().get("field2", Object.class), is("30"));
     }
-
-
-
 
     private DissectProcessor createObjectUnderTest() {
         return new DissectProcessor(pluginMetrics, dissectConfig, expressionEvaluator);
@@ -325,4 +242,15 @@ class DissectProcessorTest {
                                     .build());
     }
 
+    private void reflectivelySetDissectorMap(DissectProcessor processor) throws NoSuchFieldException, IllegalAccessException {
+        Map<String, Dissector> dissectorMap = Map.of("test", dissector);
+        java.lang.reflect.Field reflectField = DissectProcessor.class.getDeclaredField("dissectorMap");
+
+        try {
+            reflectField.setAccessible(true);
+            reflectField.set(processor, dissectorMap);
+        } finally {
+            reflectField.setAccessible(false);
+        }
+    }
 }
